# common-scrapy

./: .env.example  .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg
common/: middlewares.py  pipelines.py  utils.py
common/settings/: base.py  dev.py
common/spiders/: common_spider.py
common/templates/: kohls_products.json
common/templates/kohls_products/: extract.json  request.json  sample.json
common/templates/sephora_products/: extract.json  request.json  sample_response.json
common_scrapy/: __init__.py  cli.py
