[metadata]
name = common-scrapy
version = 0.1.0
description = Reusable Scrapy spider templates plus a CLI runner.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = commonbq
url = https://github.com/commonbq/common-scrapy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Framework :: Scrapy
    Intended Audience :: Developers
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    click>=8.3,<9
    scrapy>=2.13,<3
    python-dotenv>=1.0,<2
python_requires = >=3.9
include_package_data = True

[options.packages.find]
where = .
include =
    common
    common.*
    common_scrapy

[options.package_data]
common = templates/**/*.json

[options.entry_points]
console_scripts =
    common-scrapy = common_scrapy.cli:main
